<resources>
    <string name="app_name">LtshApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_home">主页</string>
    <string name="tab_menu_friend">好友</string>
    <string name="tab_menu_dynamic">动态</string>
    <string name="tab_menu_my">我的</string>
    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>
    <string name="backBtnText">&lt;</string>
    <string name="sendBtnText">发送</string>
    <string name="btn_yy_text">按住说话</string>

    <string name="btn_normal">按住 录音</string>
    <string name="btn_recoding">松开 结束</string>
    <string name="btn_cancel">手指上滑，取消录音 </string>
    <string name="dialog_recoding">手指上滑，取消录音 </string>
    <string name="dialog_cacel">松开手指 取消发送</string>

    <string name="chat_msg_text">文本</string>
    <string name="chat_msg_audio">语音</string>

    <!-- tag -->
    <item name="tag_message_info" type="id"></item>
    <item name="tag_my_msg_item" type="id"></item>
    <item name="tag_friend_msg_item" type="id"></item>
    <item name="tag_user_friend" type="id"></item>

</resources>
