<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ltsh.app.chat.activity.ChatActivity">


    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">
        <LinearLayout
            android:id="@+id/top_bat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_white"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_back"
                android:layout_width="100px"
                android:layout_height="match_parent"
                android:background="@color/bg_white"
                android:textColor="@color/text_topbar"
                android:textSize="30sp"
                android:text="@string/backBtnText"/>
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginRight="100px"
                android:gravity="center"
                android:text="信息"
                android:textColor="@color/text_topbar"
                android:textSize="18sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/chat_tab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="56dp"
        android:background="@color/bg_white"
        >
        <ListView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ly_tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <!-- 提醒 -->
        <LinearLayout
            android:id="@+id/ly_tab_menu_channel"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="140px"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/tab_menu_msg_switch"
                    style="@style/tab_menu_text"
                    android:background="#ffffff"
                    android:drawableTop="@mipmap/sound" />
            </RelativeLayout>
        </LinearLayout>



        <!-- 内容文本框 -->
        <LinearLayout
            android:id="@+id/ly_tab_menu_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">
                <EditText
                    android:visibility="gone"
                    android:id="@+id/ed_send_content"
                    android:textColor="@color/bg_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/ed_send_msg_input"
                    android:textColor="@color/bg_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <!-- 语音 -->
                <Button
                    android:id="@+id/btn_audio"
                    android:visibility="gone"
                    android:textColor="@color/bg_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:text="@string/btn_yy_text"
                    />
            </RelativeLayout>
        </LinearLayout>

        <!-- 发送按钮 -->
        <LinearLayout
            android:id="@+id/ly_tab_menu_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">
                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="200px"
                    android:layout_height="match_parent"
                    android:text="@string/sendBtnText"/>


                <ImageView
                    android:id="@+id/tab_menu_setting_partner"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_toRightOf="@id/btn_send"
                    android:visibility="gone"
                    android:src="@mipmap/partner_red" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/ly_tab_menu"
        android:background="@color/div_white" />


    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar" />


</RelativeLayout>
